--- a/package.json
+++ b/package.json
@@ -8,41 +8,15 @@
   "scripts": {
     "start": "webpack"
   },
-  "dependencies": {
-    "@babel/polyfill": "^7.0.0-beta.46",
-    "@babel/runtime": "^7.0.0-beta.46",
-    "antd": "^3.4.3",
-    "classnames": "^2.2.5",
-    "lodash": "^4.17.10",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0-beta.46",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.46",
-    "@babel/plugin-transform-runtime": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-flow": "^7.0.0-beta.46",
-    "@babel/preset-react": "^7.0.0-beta.46",
     "@babel/register": "^7.0.0-beta.46",
-    "@whoaa/babel-plugin-add-react-displayname": "^1.0.0",
     "babel-loader": "^8.0.0-beta.2",
-    "babel-plugin-import-7": "^1.6.7",
-    "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-promise-to-bluebird": "^2.0.0-beta.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "fast-async": "^6.3.6",
-    "file-loader": "^1.1.11",
     "less-loader": "^4.1.0",
     "postcss-color-hexa": "^1.2.4",
     "postcss-cssnext": "^3.1.0",
@@ -52,10 +26,7 @@
     "postcss-import": "Whoaa512/postcss-import#develop",
     "postcss-loader": "^2.1.4",
     "postcss-mixins": "^6.2.0",
-    "raw-loader": "^0.5.1",
-    "react-hot-loader": "^4.1.2",
     "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15"
   }
